--- a/index.html
+++ b/index.html
@@ -2,50 +2,54 @@
 <html lang="en-ca">
 
 <head>
-  <!-- Set the page title -->
   <title>Assignment 04 - Finishing a Todo List App</title>
-
-  <!-- Set the charset we're using to UTF-8 -->
   <meta charset="utf-8" />
-
-  <!-- Set the screens default zoom / scale to 1 -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <!-- Specifies the document mode for Internet Explorer -->
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-  <!-- Set the CSS Reset File -->
   <link rel="stylesheet" href="./reset.css" />
-
-  <!-- Set the main stylesheet -->
   <link rel="stylesheet" href="./style.css" />
-
-  <!-- Set the Favicon  -->
   <link rel="icon" href="./images/favicon/rocket.svg" type="image/svg+xml" />
 </head>
+
 <body>
+  <div class="landing-container">
+    <h1 class="speech"> My god, I'm overwhelmed! I have so many things to do in the city!</h1>
+    <button class="todo-button" onclick="openTodoList()">Open To-Do List</button>
+  </div>
 
-  <!--
+  <div class="todo-container" id="todoContainer">
+  <div class="container">
+    <h2 class="title">TO DO LIST</h2>
+    <div id="newtask">
+      <form id="todoForm">
+        <input type="text" id="taskInput" placeholder="Add a new task">
+        <button onclick="addTask()">Add</button>
+    </div>
+    <div id="tasks">
+      <ul>
+        <li>
+          <input type="checkbox" class="complete-checkbox" onclick="completeTask(this)">
+          <span>Sample Task</span>
+          <button class="delete" onclick="deleteTask(this)">
+            <img src="trash.png" alt="Delete">
+          </button>
+        </li>
+      </ul>
+      </form>
+    </div>
+ 
 
-    Assignment 04 - Finishing a Todo List App
-
-    Instructions:
-
-    Important checklist:
-
-    - Are users able to create and delete to do list items?
-    - Have you set a favicon? (included - but it's a rocket)
-    - Has a team member conducted a code review and left a GitHub Issue in your repo?
-    - Have you conducted a code review and left a GitHub Issue on your team member's repo?
-
-  -->
+    <ul id="tasks"></ul>
+  </div>
+    
+  </body>
 
   <main>
-    <div id="app"></div>
+    <!-- If needed, you can add content here -->
   </main>
 
   <!-- Add JavaScript File -->
   <script src="./script.js"></script>
-
 </body>
+
 </html>
