--- a/index.html
+++ b/index.html
@@ -22,21 +22,10 @@
     <h2 class="title">TO DO LIST</h2>
     <div id="newtask">
       <form id="todoForm">
-        <input type="text" id="taskInput" placeholder="Add a new task">
+        <input type="text" id="taskInput" placeholder="With great power comes great responsibility....">
         <button onclick="addTask()">Add</button>
     </div>
-    <div id="tasks">
-      <ul>
-        <li>
-          <input type="checkbox" class="complete-checkbox" onclick="completeTask(this)">
-          <span>Sample Task</span>
-          <button class="delete" onclick="deleteTask(this)">
-            <img src="trash.png" alt="Delete">
-          </button>
-        </li>
-      </ul>
-      </form>
-    </div>
+
  
 
     <ul id="tasks"></ul>
