--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2 class="title">TO DO LIST</h2>
     <div id="newtask">
       <form id="todoForm">
-        <input type="text" id="taskInput" placeholder="With great power comes great responsibility....">
+        <input type="text" id="taskInput" placeholder="Buy MJ flowers....">
         <button onclick="addTask()">Add</button>
     </div>
 
